--- a/giriş.css
+++ b/giriş.css
@@ -14,7 +14,6 @@ input{
 fieldset {
     width: 200px;
     height: 300px;
-    margin: 10% 40%;
     padding: 20px;
     border-radius: 15px;
     background: antiquewhite;
@@ -27,4 +26,11 @@ fieldset {
 .label2{
     font-size: large;
     color:blue
+}
+body {
+    min-height: 100vh; 
+    margin: 0; 
+    display: flex;  
+    justify-content: center; 
+    align-items: center; 
 }
