--- a/yakında.css
+++ b/yakında.css
@@ -1,3 +1,9 @@
 h1{
     color: red;
 }
+a{
+    text-decoration: none;
+    padding: 10px;
+    background-color: brown;
+    border-radius: 15px;
+}
