--- a/yakında.css
+++ b/yakında.css
@@ -6,4 +6,9 @@ a{
     padding: 10px;
     background-color: brown;
     border-radius: 15px;
+    color:  lightgray
+}
+a:hover{
+    background-color: #584141;
+    color: antiquewhite;
 }
